# spbu_c_homeworks

./: CMakeLists.txt  README.md
FInal2/: kr2_1.c
Final2/: kr2_2.c  z_2.c
Final_Test/: task_1.c
Final_test/: task_2.c
Homework1/: task_1.c  task_2.c  task_3.c  task_4.c  task_5.c
Homework2/Task_1/: linked_map.c  linked_map.h  task_1.c  text.txt
Homework2/Task_2/: dna_editor.c  dna_editor.h  dna_logs.txt  task_2.c
Homework3/: task_1.c  task_2.c  task_3.c
Homework4/: task_1.c  task_2.md
Homework5/: TreeMap.c  TreeMap.h  out.txt  shop_logs.txt  task_1.c
Homework9/: dijkstra.c
Retest1/: test1_task1.c  test1_task2.c  test2_task2.c
Test1/: Vector.c  Vector.h  task_1.c
Test2/: task_1.c  task_2.c  task_3.c
homework1/: task_4.c  task_5.c
homework_1_1/: task_1.c
